--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="scripts/bootstrap/dist/css/bootstrap.min.css">
+  <title>VanillaJS</title>
+</head>
+<body>
 
-<div>asdasd</div>
+
+  <!-- JS Library Dependencies -->
+  <script src="scripts/jquery/dist/jquery.min.js"></script>
+  <script src="scripts/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="scripts/axios/dist/axios.min.js"></script>
+  <script src="scripts/handlebars/dist/handlebars.min.js"></script>
+  <script src="js/app.js"></script>
+</body>
+</html>
