--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,73 @@
 </head>
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <a class="navbar-brand" href="/">VanillaJS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Dashboard <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    View
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/optiona">Option A</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/stream">Option B</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </nav>
+
+  <!-- Application Root -->
+<div id="app"></div>
+
+
+  <!-- Error Template -->
+<script id="error-template" type="text/x-handlebars-template">
+  <div class="ui {{color}} inverted segment" style="height:250px;">
+    <br>
+    <h2 class="ui center aligned icon header">
+      <i class="exclamation triangle icon"></i>
+      <div class="content">
+        {{title}}
+        <div class="sub header">{{message}}</div>
+      </div>
+    </h2>
+  </div>
+</script>
+
+<!-- Application Root -->
+<div id="app"></div>
+</div>
+
+<!-- OptionA Template -->
+<script id="optiona-template" type="text/x-handlebars-template">
+  <h1 class="ui header">OptionA</h1>
+  <hr>
+</script>
+
+<!-- OptionA Template -->
+<script id="optiona-template" type="text/x-handlebars-template">
+  <h1 class="ui header">OptionA</h1>
+  <hr>
+</script>
+
+
 
   <!-- JS Library Dependencies -->
   <script src="scripts/jquery/dist/jquery.min.js"></script>
   <script src="scripts/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="scripts/axios/dist/axios.min.js"></script>
   <script src="scripts/handlebars/dist/handlebars.min.js"></script>
+  <script src="scripts/vanilla-router/dist/vanilla-router.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
